1/parser.output
Terminals unused in grammar

   T_string
   T_intArr
   T_floatArr
   T_alloc
   T_free


State 0 conflicts: 4 shift/reduce, 1 reduce/reduce
State 7 conflicts: 4 shift/reduce, 1 reduce/reduce
State 9 conflicts: 4 shift/reduce, 1 reduce/reduce
State 10 conflicts: 3 shift/reduce
State 89 conflicts: 3 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: EXTDEFLIST

    2 EXTDEFLIST: /* empty */
    3           | FUNC EXTDEFLIST
    4           | DECLAREVALLIST EXTDEFLIST

    5 FUNC: T_func T_identifier T_ls FUNC_VAR_LIST T_rs T_TYPE BODY

    6 FUNC_ARG_LIST: /* empty */
    7              | EXP FUNC_ARG

    8 FUNC_ARG: /* empty */
    9         | T_comma EXP FUNC_ARG

   10 FUNC_VAR_LIST: /* empty */
   11              | T_TYPE T_identifier FUNC_VAR

   12 FUNC_VAR: /* empty */
   13         | T_comma T_TYPE T_identifier

   14 T_TYPE: T_int
   15       | T_float
   16       | T_char

   17 DECLAREVALLIST: DECLAREVAL DECLAREVALLIST
   18               | /* empty */

   19 DECLAREVAL: T_TYPE T_identifier T_semi
   20           | T_TYPE T_identifier T_assign EXP T_semi

   21 BODY: T_lb DECLAREVALLIST STMTLIST T_rb

   22 STMTLIST: /* empty */
   23         | STMT STMTLIST

   24 STMT: BODY
   25     | EXP T_semi
   26     | T_return EXP T_semi
   27     | T_break T_semi
   28     | T_continue T_semi
   29     | IF_STMT
   30     | IF_ELSE_STMT
   31     | WHILE_STMT

   32 IF_STMT: T_if T_ls EXP T_rs STMT

   33 IF_ELSE_STMT: T_if T_ls EXP T_rs STMT T_else STMT

   34 WHILE_STMT: T_while T_ls EXP T_rs STMT

   35 CONST: T_cst_int
   36      | T_cst_float
   37      | T_cst_char

   38 EXP: CONST
   39    | T_identifier
   40    | T_ls EXP T_ls
   41    | EXP T_and EXP
   42    | EXP T_assign EXP
   43    | EXP T_or EXP
   44    | EXP T_ss
   45    | EXP T_pp
   46    | T_not EXP
   47    | EXP T_land EXP
   48    | EXP T_lor EXP
   49    | T_lnot EXP
   50    | EXP T_lxor EXP
   51    | EXP T_add EXP
   52    | EXP T_sub EXP
   53    | EXP T_mul EXP
   54    | EXP T_div EXP
   55    | EXP T_equal EXP
   56    | EXP T_big EXP
   57    | EXP T_bige EXP
   58    | EXP T_small EXP
   59    | EXP T_smalle EXP
   60    | EXP T_nequal EXP
   61    | EXP T_leftmove EXP
   62    | EXP T_rightmove EXP
   63    | T_identifier T_getarr EXP
   64    | T_TYPE T_ls EXP T_rs
   65    | EXP T_mod EXP
   66    | T_identifier T_ls FUNC_ARG_LIST T_rs


Terminals, with rules where they appear

$end (0) 0
error (256)
T_int (258) 14
T_char (259) 16
T_float (260) 15
T_string (261)
T_intArr (262)
T_floatArr (263)
T_identifier (264) 5 11 13 19 20 39 63 66
T_func (265) 5
T_alloc (266)
T_free (267)
T_if (268) 32 33
T_else (269) 33
T_while (270) 34
T_break (271) 27
T_continue (272) 28
T_return (273) 26
T_getarr (274) 63
T_not (275) 46
T_lnot (276) 49
T_div (277) 54
T_mul (278) 53
T_mod (279) 65
T_sub (280) 52
T_add (281) 51
T_leftmove (282) 61
T_rightmove (283) 62
T_big (284) 56
T_bige (285) 57
T_small (286) 58
T_smalle (287) 59
T_equal (288) 55
T_nequal (289) 60
T_land (290) 47
T_lxor (291) 50
T_lor (292) 48
T_and (293) 41
T_or (294) 43
T_assign (295) 20 42
T_pp (296) 45
T_ss (297) 44
T_cst_int (298) 35
T_cst_float (299) 36
T_cst_char (300) 37
T_ls (301) 5 32 33 34 40 64 66
T_rs (302) 5 32 33 34 64 66
T_lb (303) 21
T_rb (304) 21
T_semi (305) 19 20 25 26 27 28
T_comma (306) 9 13


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
EXTDEFLIST (54)
    on left: 2 3 4, on right: 1 3 4
FUNC (55)
    on left: 5, on right: 3
FUNC_ARG_LIST (56)
    on left: 6 7, on right: 66
FUNC_ARG (57)
    on left: 8 9, on right: 7 9
FUNC_VAR_LIST (58)
    on left: 10 11, on right: 5
FUNC_VAR (59)
    on left: 12 13, on right: 11
T_TYPE (60)
    on left: 14 15 16, on right: 5 11 13 19 20 64
DECLAREVALLIST (61)
    on left: 17 18, on right: 4 17 21
DECLAREVAL (62)
    on left: 19 20, on right: 17
BODY (63)
    on left: 21, on right: 5 24
STMTLIST (64)
    on left: 22 23, on right: 21 23
STMT (65)
    on left: 24 25 26 27 28 29 30 31, on right: 23 32 33 34
IF_STMT (66)
    on left: 32, on right: 29
IF_ELSE_STMT (67)
    on left: 33, on right: 30
WHILE_STMT (68)
    on left: 34, on right: 31
CONST (69)
    on left: 35 36 37, on right: 38
EXP (70)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 65 66, on right: 7 9 20 25 26 32 33
    34 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65


state 0

    0 $accept: . Program $end

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3
    T_func   shift, and go to state 4

    $end      reduce using rule 2 (EXTDEFLIST)
    $end      [reduce using rule 18 (DECLAREVALLIST)]
    T_int     [reduce using rule 18 (DECLAREVALLIST)]
    T_char    [reduce using rule 18 (DECLAREVALLIST)]
    T_float   [reduce using rule 18 (DECLAREVALLIST)]
    T_func    [reduce using rule 18 (DECLAREVALLIST)]
    $default  reduce using rule 2 (EXTDEFLIST)

    Program         go to state 5
    EXTDEFLIST      go to state 6
    FUNC            go to state 7
    T_TYPE          go to state 8
    DECLAREVALLIST  go to state 9
    DECLAREVAL      go to state 10


state 1

   14 T_TYPE: T_int .

    $default  reduce using rule 14 (T_TYPE)


state 2

   16 T_TYPE: T_char .

    $default  reduce using rule 16 (T_TYPE)


state 3

   15 T_TYPE: T_float .

    $default  reduce using rule 15 (T_TYPE)


state 4

    5 FUNC: T_func . T_identifier T_ls FUNC_VAR_LIST T_rs T_TYPE BODY

    T_identifier  shift, and go to state 11


state 5

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 6

    1 Program: EXTDEFLIST .

    $default  reduce using rule 1 (Program)


state 7

    3 EXTDEFLIST: FUNC . EXTDEFLIST

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3
    T_func   shift, and go to state 4

    $end      reduce using rule 2 (EXTDEFLIST)
    $end      [reduce using rule 18 (DECLAREVALLIST)]
    T_int     [reduce using rule 18 (DECLAREVALLIST)]
    T_char    [reduce using rule 18 (DECLAREVALLIST)]
    T_float   [reduce using rule 18 (DECLAREVALLIST)]
    T_func    [reduce using rule 18 (DECLAREVALLIST)]
    $default  reduce using rule 2 (EXTDEFLIST)

    EXTDEFLIST      go to state 13
    FUNC            go to state 7
    T_TYPE          go to state 8
    DECLAREVALLIST  go to state 9
    DECLAREVAL      go to state 10


state 8

   19 DECLAREVAL: T_TYPE . T_identifier T_semi
   20           | T_TYPE . T_identifier T_assign EXP T_semi

    T_identifier  shift, and go to state 14


state 9

    4 EXTDEFLIST: DECLAREVALLIST . EXTDEFLIST

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3
    T_func   shift, and go to state 4

    $end      reduce using rule 2 (EXTDEFLIST)
    $end      [reduce using rule 18 (DECLAREVALLIST)]
    T_int     [reduce using rule 18 (DECLAREVALLIST)]
    T_char    [reduce using rule 18 (DECLAREVALLIST)]
    T_float   [reduce using rule 18 (DECLAREVALLIST)]
    T_func    [reduce using rule 18 (DECLAREVALLIST)]
    $default  reduce using rule 2 (EXTDEFLIST)

    EXTDEFLIST      go to state 15
    FUNC            go to state 7
    T_TYPE          go to state 8
    DECLAREVALLIST  go to state 9
    DECLAREVAL      go to state 10


state 10

   17 DECLAREVALLIST: DECLAREVAL . DECLAREVALLIST

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3

    T_int     [reduce using rule 18 (DECLAREVALLIST)]
    T_char    [reduce using rule 18 (DECLAREVALLIST)]
    T_float   [reduce using rule 18 (DECLAREVALLIST)]
    $default  reduce using rule 18 (DECLAREVALLIST)

    T_TYPE          go to state 8
    DECLAREVALLIST  go to state 16
    DECLAREVAL      go to state 10


state 11

    5 FUNC: T_func T_identifier . T_ls FUNC_VAR_LIST T_rs T_TYPE BODY

    T_ls  shift, and go to state 17


state 12

    0 $accept: Program $end .

    $default  accept


state 13

    3 EXTDEFLIST: FUNC EXTDEFLIST .

    $default  reduce using rule 3 (EXTDEFLIST)


state 14

   19 DECLAREVAL: T_TYPE T_identifier . T_semi
   20           | T_TYPE T_identifier . T_assign EXP T_semi

    T_assign  shift, and go to state 18
    T_semi    shift, and go to state 19


state 15

    4 EXTDEFLIST: DECLAREVALLIST EXTDEFLIST .

    $default  reduce using rule 4 (EXTDEFLIST)


state 16

   17 DECLAREVALLIST: DECLAREVAL DECLAREVALLIST .

    $default  reduce using rule 17 (DECLAREVALLIST)


state 17

    5 FUNC: T_func T_identifier T_ls . FUNC_VAR_LIST T_rs T_TYPE BODY

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3

    $default  reduce using rule 10 (FUNC_VAR_LIST)

    FUNC_VAR_LIST  go to state 20
    T_TYPE         go to state 21


state 18

   20 DECLAREVAL: T_TYPE T_identifier T_assign . EXP T_semi

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 31


state 19

   19 DECLAREVAL: T_TYPE T_identifier T_semi .

    $default  reduce using rule 19 (DECLAREVAL)


state 20

    5 FUNC: T_func T_identifier T_ls FUNC_VAR_LIST . T_rs T_TYPE BODY

    T_rs  shift, and go to state 32


state 21

   11 FUNC_VAR_LIST: T_TYPE . T_identifier FUNC_VAR

    T_identifier  shift, and go to state 33


state 22

   39 EXP: T_identifier .
   63    | T_identifier . T_getarr EXP
   66    | T_identifier . T_ls FUNC_ARG_LIST T_rs

    T_getarr  shift, and go to state 34
    T_ls      shift, and go to state 35

    $default  reduce using rule 39 (EXP)


state 23

   46 EXP: T_not . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 36


state 24

   49 EXP: T_lnot . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 37


state 25

   35 CONST: T_cst_int .

    $default  reduce using rule 35 (CONST)


state 26

   36 CONST: T_cst_float .

    $default  reduce using rule 36 (CONST)


state 27

   37 CONST: T_cst_char .

    $default  reduce using rule 37 (CONST)


state 28

   40 EXP: T_ls . EXP T_ls

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 38


state 29

   64 EXP: T_TYPE . T_ls EXP T_rs

    T_ls  shift, and go to state 39


state 30

   38 EXP: CONST .

    $default  reduce using rule 38 (EXP)


state 31

   20 DECLAREVAL: T_TYPE T_identifier T_assign EXP . T_semi
   41 EXP: EXP . T_and EXP
   42    | EXP . T_assign EXP
   43    | EXP . T_or EXP
   44    | EXP . T_ss
   45    | EXP . T_pp
   47    | EXP . T_land EXP
   48    | EXP . T_lor EXP
   50    | EXP . T_lxor EXP
   51    | EXP . T_add EXP
   52    | EXP . T_sub EXP
   53    | EXP . T_mul EXP
   54    | EXP . T_div EXP
   55    | EXP . T_equal EXP
   56    | EXP . T_big EXP
   57    | EXP . T_bige EXP
   58    | EXP . T_small EXP
   59    | EXP . T_smalle EXP
   60    | EXP . T_nequal EXP
   61    | EXP . T_leftmove EXP
   62    | EXP . T_rightmove EXP
   65    | EXP . T_mod EXP

    T_div        shift, and go to state 40
    T_mul        shift, and go to state 41
    T_mod        shift, and go to state 42
    T_sub        shift, and go to state 43
    T_add        shift, and go to state 44
    T_leftmove   shift, and go to state 45
    T_rightmove  shift, and go to state 46
    T_big        shift, and go to state 47
    T_bige       shift, and go to state 48
    T_small      shift, and go to state 49
    T_smalle     shift, and go to state 50
    T_equal      shift, and go to state 51
    T_nequal     shift, and go to state 52
    T_land       shift, and go to state 53
    T_lxor       shift, and go to state 54
    T_lor        shift, and go to state 55
    T_and        shift, and go to state 56
    T_or         shift, and go to state 57
    T_assign     shift, and go to state 58
    T_pp         shift, and go to state 59
    T_ss         shift, and go to state 60
    T_semi       shift, and go to state 61


state 32

    5 FUNC: T_func T_identifier T_ls FUNC_VAR_LIST T_rs . T_TYPE BODY

    T_int    shift, and go to state 1
    T_char   shift, and go to state 2
    T_float  shift, and go to state 3

    T_TYPE  go to state 62


state 33

   11 FUNC_VAR_LIST: T_TYPE T_identifier . FUNC_VAR

    T_comma  shift, and go to state 63

    $default  reduce using rule 12 (FUNC_VAR)

    FUNC_VAR  go to state 64


state 34

   63 EXP: T_identifier T_getarr . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 65


state 35

   66 EXP: T_identifier T_ls . FUNC_ARG_LIST T_rs

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    $default  reduce using rule 6 (FUNC_ARG_LIST)

    FUNC_ARG_LIST  go to state 66
    T_TYPE         go to state 29
    CONST          go to state 30
    EXP            go to state 67


state 36

   41 EXP: EXP . T_and EXP
   42    | EXP . T_assign EXP
   43    | EXP . T_or EXP
   44    | EXP . T_ss
   45    | EXP . T_pp
   46    | T_not EXP .
   47    | EXP . T_land EXP
   48    | EXP . T_lor EXP
   50    | EXP . T_lxor EXP
   51    | EXP . T_add EXP
   52    | EXP . T_sub EXP
   53    | EXP . T_mul EXP
   54    | EXP . T_div EXP
   55    | EXP . T_equal EXP
   56    | EXP . T_big EXP
   57    | EXP . T_bige EXP
   58    | EXP . T_small EXP
   59    | EXP . T_smalle EXP
   60    | EXP . T_nequal EXP
   61    | EXP . T_leftmove EXP
   62    | EXP . T_rightmove EXP
   65    | EXP . T_mod EXP

    T_pp  shift, and go to state 59
    T_ss  shift, and go to state 60

    $default  reduce using rule 46 (EXP)


state 37

   41 EXP: EXP . T_and EXP
   42    | EXP . T_assign EXP
   43    | EXP . T_or EXP
   44    | EXP . T_ss
   45    | EXP . T_pp
   47    | EXP . T_land EXP
   48    | EXP . T_lor EXP
   49    | T_lnot EXP .
   50    | EXP . T_lxor EXP
   51    | EXP . T_add EXP
   52    | EXP . T_sub EXP
   53    | EXP . T_mul EXP
   54    | EXP . T_div EXP
   55    | EXP . T_equal EXP
   56    | EXP . T_big EXP
   57    | EXP . T_bige EXP
   58    | EXP . T_small EXP
   59    | EXP . T_smalle EXP
   60    | EXP . T_nequal EXP
   61    | EXP . T_leftmove EXP
   62    | EXP . T_rightmove EXP
   65    | EXP . T_mod EXP

    T_pp  shift, and go to state 59
    T_ss  shift, and go to state 60

    $default  reduce using rule 49 (EXP)


state 38

   40 EXP: T_ls EXP . T_ls
   41    | EXP . T_and EXP
   42    | EXP . T_assign EXP
   43    | EXP . T_or EXP
   44    | EXP . T_ss
   45    | EXP . T_pp
   47    | EXP . T_land EXP
   48    | EXP . T_lor EXP
   50    | EXP . T_lxor EXP
   51    | EXP . T_add EXP
   52    | EXP . T_sub EXP
   53    | EXP . T_mul EXP
   54    | EXP . T_div EXP
   55    | EXP . T_equal EXP
   56    | EXP . T_big EXP
   57    | EXP . T_bige EXP
   58    | EXP . T_small EXP
   59    | EXP . T_smalle EXP
   60    | EXP . T_nequal EXP
   61    | EXP . T_leftmove EXP
   62    | EXP . T_rightmove EXP
   65    | EXP . T_mod EXP

    T_div        shift, and go to state 40
    T_mul        shift, and go to state 41
    T_mod        shift, and go to state 42
    T_sub        shift, and go to state 43
    T_add        shift, and go to state 44
    T_leftmove   shift, and go to state 45
    T_rightmove  shift, and go to state 46
    T_big        shift, and go to state 47
    T_bige       shift, and go to state 48
    T_small      shift, and go to state 49
    T_smalle     shift, and go to state 50
    T_equal      shift, and go to state 51
    T_nequal     shift, and go to state 52
    T_land       shift, and go to state 53
    T_lxor       shift, and go to state 54
    T_lor        shift, and go to state 55
    T_and        shift, and go to state 56
    T_or         shift, and go to state 57
    T_assign     shift, and go to state 58
    T_pp         shift, and go to state 59
    T_ss         shift, and go to state 60
    T_ls         shift, and go to state 68


state 39

   64 EXP: T_TYPE T_ls . EXP T_rs

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 69


state 40

   54 EXP: EXP T_div . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 70


state 41

   53 EXP: EXP T_mul . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 71


state 42

   65 EXP: EXP T_mod . EXP

    T_int         shift, and go to state 1
    T_char        shift, and go to state 2
    T_float       shift, and go to state 3
    T_identifier  shift, and go to state 22
    T_not         shift, and go to state 23
    T_lnot        shift, and go to state 24
    T_cst_int     shift, and go to state 25
    T_cst_float   shift, and go to state 26
    T_cst_char    shift, and go to state 27
    T_ls          shift, and go to state 28

    T_TYPE  go to state 29
    CONST   go to state 30
    EXP     go to state 72


state 43

   52 EXP: EXP T_sub . EXP
